# agent

./: .env.example  .gitignore  AGENT_ARCHITECTURE_DETAIL_CN.md  DEV_SPEC.md  INTERVIEW_DEEP_DIVE_CN.md  README.md  STARTUP_CN.md  pyproject.toml  分阶段流程.md  项目说明文档.md
app/: main.py
app/core/: config.py  llm_client.py  llm_config.py  logging.py
app/middleware/: rate_limit.py  request_logging.py
app/models/: __init__.py  vehicle_diagnosis.py
app/queues/: task_queue.py
app/repositories/: mongo_vehicle_diagnosis_repository.py  vehicle_diagnosis_repository.py
app/routers/: vehicle_diagnosis.py
app/schemas/: vehicle_diagnosis.py
app/services/: vehicle_diagnosis_service.py
config/: llm_config.example.json
scripts/: generate_agent_architecture_png.py  seed_mongo_demo_data.py
tests/: __init__.py  test_graph_smoke.py
vehicleagents/: __init__.py  default_config.py
vehicleagents/agents/: __init__.py  summary_agent.py
vehicleagents/agents/advisor/: __init__.py  repair_advisor.py
vehicleagents/agents/analysts/: __init__.py  diagnostic_code_analyst.py  experience_analyst.py  knowledge_analyst.py  symptom_analyst.py  telemetry_analyst.py  vin_context_analyst.py
vehicleagents/agents/planner/: __init__.py  diagnostic_planner.py
vehicleagents/agents/researchers/: __init__.py  counterfactual_researcher.py  hypothesis_researcher.py
vehicleagents/agents/safety/: __init__.py  (+2 more)
vehicleagents/dataflows/: __init__.py  interface.py
vehicleagents/graph/: __init__.py  conditional_logic.py  reflection.py  setup.py  signal_processing.py  vehicle_graph.py
(+12 files in other folders)
